--- a/src/www/css/ionic.app.css
+++ b/src/www/css/ionic.app.css
@@ -9814,8 +9814,17 @@ i {
   padding: 0px; }
 
 .home-div-results
+.option-text {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  margin-right: 5px; }
+
+.home-div-results
 .percentage {
-  margin-left: 10px; }
+  width: 0%;
+  margin-left: 5px;
+  font-size: smaller; }
 
 .home-button-changeVote {
   background-color: white;
@@ -9824,10 +9833,28 @@ i {
   font-size: smaller;
   margin-top: 5px; }
 
+@-webkit-keyframes percentageAnimation {
+  0% {
+    -webkit-transform: scale3d(0, 1, 1); }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1); } }
+
+@keyframes percentageAnimation {
+  0% {
+    transform: scale3d(0, 1, 1); }
+  100% {
+    transform: scale3d(1, 1, 1); } }
+
 .home-div-progress > progress {
   margin: 0px;
   margin-top: 6px;
-  background-color: white; }
+  background-color: white;
+  -webkit-transform-origin: left center 0px;
+  -webkit-animation: percentageAnimation ease-in 1;
+  -webkit-animation-duration: .2s;
+  transform-origin: left center 0px;
+  animation: percentageAnimation ease-in 1;
+  animation-duration: .2s; }
 
 .home-div-progress > progress::-webkit-progress-value {
   background-color: #ABD0E8;
